[tool.poetry]
name = "entropy"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"

[project.scripts]
entropy = "entropy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
