[tool.poetry]
name = "entropy-calculator"
version = "0.1.0"
description = "Calculate the informational entropy of a file"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
entropy = "entropy_calculator.__main__:main"